fixed nftx and cargo data scraping for some edge cases and added a graph showing sale volume per platform

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ GETH_NODE_ENDPOINT="SETUP THIS"
 DATABASE_FILE=db.db
 TARGET_CONTRACT=0xf07468ead8cf26c752c676e43c814fee9c8cf402
 TARGET_ABI_FILE=phunks.abi
-STARTING_BLOCK=12674389
+STARTING_BLOCK=12674389 # phunk contract creation
 TARGET_CONTRACT_MARKETPLACE=0xd6c037be7fa60587e174db7a6710f7635d2971e7
 TARGET_ABI_FILE_MARKETPLACE=phunksmarketplace.abi
-STARTING_BLOCK_MARKETPLACE=13675472
+STARTING_BLOCK_MARKETPLACE=13675472 # marketplace contract creation
 WORK_DIRECTORY=./
