implemented a twitter bot mode, x2y2 marketplace support and weth transaction support

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ TARGET_CONTRACT_MARKETPLACE=0xd6c037be7fa60587e174db7a6710f7635d2971e7
 TARGET_ABI_FILE_MARKETPLACE=phunksmarketplace.abi
 STARTING_BLOCK_MARKETPLACE=13675472 # marketplace contract creation
 WORK_DIRECTORY=./
+POST_ON_TWITTER=true
+HAS_ELEVATED_TWITTER_API_ACCESS=false
+TWITTER_ACCESS_TOKEN=<TWITTER_V1_API_AUTHENTICATION>
+TWITTER_TOKEN_SECRET=<TWITTER_V1_API_AUTHENTICATION>
+TWITTER_CLIENT_ID=<TWITTER_V2_API_AUTHENTICATION>
+TWITTER_CLIENT_SECRET=<TWITTER_V2_API_AUTHENTICATION>
