--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "lib": [
+      "es2020", "esnext"
+    ],
+    "module": "commonjs",
+    "target": "es2020",
   }
 }
